# esig

./: CHANGELOG  LICENSE  MANIFEST.in  pyproject.toml
.github/workflows/: esig_with_roughpy.yml
src/esig/: __init__.py  backends.py  tosig.py
tests/: auxiliaryfunct.py  esigtests.py  recombinetests.py  test_package.py  test_package_interface.py
