[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"


[project]
name = "esig"
version = "1.0.0"
authors = [ { name = "Terry Lyons", email = "software@lyonstech.net"} ]
maintainers = [
    { name = "Sam Morley", email = "info@datasig.ac.uk"}
]
license-files = { paths = [ "LICENSE" ] }

keywords = [
    "data streams",
    "rough paths",
    "signatures"
]

description = "This package provides \"rough path\" tools for analysing vector time series."
readme = "README.md"
requires-python = ">= 3.9"

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Scientific/Engineering :: Mathematics',
    "License :: OSI Approved :: BSD License"
]

dependencies = [
    "numpy",
    "RoughPy",
    "PyRecombine"
]


[project.urls]
Documentation = "https://esig.readthedocs.io/en/latest"
"Source code" = "https://github.com/datasig-ac-uk/esig"


[tool.hatch.build.targets.sdist]
include = [ "src/esig/*.py", "tests"]

[tool.hatch.build.targets.wheel]
packages = [ "src/esig" ]
